Fix UserRef CSS alignment

--- a/judgels-frontends/raphael/src/components/UserRef/UserRef.scss
+++ b/judgels-frontends/raphael/src/components/UserRef/UserRef.scss
@@ -11,7 +11,7 @@
 }
 
 .user-ref__username {
-  vertical-align: middle;
+  vertical-align: baseline;
   text-decoration: none !important;
 }
 
